--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ span[class~="sr-only"] {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    border: 1px solid black;
+    content: "";
+    /* border: 1px solid black; */
 }
 
 body {
@@ -66,6 +67,35 @@ main {
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
+}
+
+nav a {
+    text-decoration: none;
+    font-family: Raleway, sans-serif;
+    font-weight: 600;
+}
+
+nav {
+    width: 100vw;
+    min-height: 8vh;
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.nav-left {
+    width: 60%;
+}
+
+.nav-right {
+    width: 40%;
+}
+
+#nav-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-transform: uppercase;
 }
 
 .heading {
