--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ main {
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
+    height: 100%;
 }
 
 nav a {
@@ -98,27 +99,69 @@ nav {
     text-transform: uppercase;
 }
 
+section {
+    max-width: 70vw;
+    margin: 2rem;
+}
+
 .heading {
     font-family: Lora, serif;
 }
 
+.contact {
+    display: block;
+    margin: 4rem 0;
+}
+
+.contact-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .contact-link {
     font-size: 2.5rem;
+    margin: 0 1rem;
+    text-decoration: none;
 }
 
 .no-dec {
     list-style-type: none;
 }
 
+a, a:visited, a:active {
+    color: inherit;
+}
+
+/* .projects-gallery {
+} */
+
+.project-tile {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: nowrap;
+    height: 20vw;
+    width: 22vw;
+    background-color: #889da4;
+    margin: 2rem 0;
+}
+
 .tile-thumb {
-    width: 320px;
-    height: 240px;
+    max-width: 320px;
+    max-height: 240px;
     background-color: #889da4;
 }
 
 .mobile-only {
     display: none;
 }
+
+.hide {
+    display: none;
+}
+
 
 @media only screen and (max-width: 700px) {
     .mobile-only {
