--- a/styles.css
+++ b/styles.css
@@ -74,22 +74,37 @@ nav a {
     text-decoration: none;
     font-family: Raleway, sans-serif;
     font-weight: 600;
+    padding: 0.25rem;
+}
+
+nav a:hover {
+    font-weight: 700;
+    text-shadow: 0px 0px 8px var(--shades-dark);
+}
+
+header {
+    position: sticky;
+    top: 0px;
 }
 
 nav {
     width: 100vw;
     min-height: 8vh;
-    display: inline-flex;
+    display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: var(--accent-dark);
+    color: var(--shades-light);
 }
 
 .nav-left {
     width: 60%;
+    padding-left: 2rem;
 }
 
 .nav-right {
     width: 40%;
+    padding-right: 2rem;
 }
 
 #nav-list {
