--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ span[class~="sr-only"] {
     margin: 0;
     box-sizing: border-box;
     content: "";
-    /* border: 1px solid black; */
 }
 
 body {
@@ -193,38 +192,40 @@ a:active {
 .project-tile {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    flex-wrap: nowrap;
     height: 20vw;
     width: 22vw;
-    background-color: #889da4;
-    box-shadow: 0px 0px 8px var(--shades-dark);
+    box-shadow: 0px 0px 20px 2px var(--accent-light);
+    position: relative;
 }
 
-.project-tile > a.heading {
-    text-decoration: none;
+img.project-thumb {
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
 
-.project-tile > .heading {
+.overlay {
+    position: absolute;
+    top: 0;
+    background-color: var(--main-brand);
     color: var(--shades-light);
+    width: 100%;
+    transition: 0.5s ease;
+    opacity: 0;
+    font-size: 1.2rem;
+    padding: 1rem;
     text-align: center;
+    font-family: Raleway, sans-serif;
+}
+
+.project-tile:hover .overlay {
+    opacity: 0.9;
 }
 
 .project-tile:hover {
     transform: scale(1.05);
     transition: transform 0.5s ease-in-out 2ms;
-}
-
-.tile-thumb {
-    max-width: 320px;
-    max-height: 240px;
-    background-color: #889da4;
-}
-
-.project-thumb {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .mobile-only {
